--- a/src/client/assets/javascripts/features/core/core.scss
+++ b/src/client/assets/javascripts/features/core/core.scss
@@ -7,10 +7,12 @@ $primary-color: #f8f8f8;
   background-color: $primary-color !important;
   z-index: 2;
   box-shadow: 0px -3px 14px 0px rgba(184,184,184,0.55);
+  border-bottom: solid 1px #ddd;
 }
 #coreLayout > div > .ant-layout-sider {
   background-color: $primary-color !important;
   box-shadow: 3px 0px 10px 0px rgba(184,184,184,0.15);
+  border-right: solid 1px #ddd;
 }
 
 .ant-menu {
