feat(SceneEditor): ajoute une premiere version (temporaire) d'édition de scène
Utilise le drag and drop pour faire sélectionner les médias.
Affichage des médias en liste, on peut en sélectionner un pour faire apparaitre un form

--- a/src/client/assets/javascripts/features/displayManagement/displayManagement.scss
+++ b/src/client/assets/javascripts/features/displayManagement/displayManagement.scss
@@ -13,3 +13,12 @@ $primary-color: #f4f4f4;
 #displayManagementLayout > .ant-layout-content {
   background-color: #f1f1f1;
 }
+
+#displayManagementLayout .display-management-content-layout {
+  height: auto;
+}
+
+#displayManagementLayout .ant-layout-content {
+  padding: 5px;
+  background-color: #f1f1f1;
+}
