feat: corrige le style media list et scene editor
Un nom de fichier était très très long et fait surgir certains problèmes.

--- a/src/client/assets/javascripts/features/displayManagement/components/MediaListContainer/MediaList.scss
+++ b/src/client/assets/javascripts/features/displayManagement/components/MediaListContainer/MediaList.scss
@@ -19,6 +19,9 @@
   border: 0px solid black;
   margin-top: 5px;
   cursor: pointer;
+  word-wrap: break-word;
+  overflow: hidden;
+  height: 60px;
 
   -webkit-user-select: none;
   -moz-user-select: none;
