--- a/src/client/assets/javascripts/features/core/components/SideMenu/SideMenu.scss
+++ b/src/client/assets/javascripts/features/core/components/SideMenu/SideMenu.scss
@@ -1,4 +1,8 @@
-.SideMenu.collapsed {
+#SideMenu {
+  background: none;
+}
+
+#SideMenu.collapsed {
   .anticon {
     font-size: 16px;
     vertical-align: middle;
