feat(core): ajoute des bordures sass

--- a/src/client/assets/javascripts/features/core/components/ManagementLayout/ManagementLayout.scss
+++ b/src/client/assets/javascripts/features/core/components/ManagementLayout/ManagementLayout.scss
@@ -9,6 +9,7 @@
     z-index: 2;
     background-color: $primary-color !important;
     box-shadow: 3px 0px 10px 0px rgba(184,184,184,0.15);
+    border-right: 1px solid #e8e8e8;
   }
   .siderContent {
     position: absolute;
