--- a/src/client/assets/javascripts/features/displayManagement/components/MediaListContainer/MediaList.scss
+++ b/src/client/assets/javascripts/features/displayManagement/components/MediaListContainer/MediaList.scss
@@ -3,7 +3,7 @@
   background-color: #f4f4f4;
   border: 0px solid black;
   width: 250px;
-  padding: 5px 0 5px 0;
+  padding: 5px;
 }
 
 .group-media-list {
