fix(DataTable): améliore un peu la disposition des boutons d'action

--- a/src/client/assets/javascripts/features/displayManagement/components/DataTable/DataTable.scss
+++ b/src/client/assets/javascripts/features/displayManagement/components/DataTable/DataTable.scss
@@ -10,7 +10,7 @@ div.maw-data-table {
   }
   .maw-data-table-actions-column > div {
     display: flex;
-  	justify-content: space-between;
-  	align-items: center;
+    justify-content: space-around;
+    align-items: center;
   }
 }
