--- a/src/client/assets/javascripts/features/displayManagement/components/SceneEditorContainer/SceneEditorContainer.scss
+++ b/src/client/assets/javascripts/features/displayManagement/components/SceneEditorContainer/SceneEditorContainer.scss
@@ -35,7 +35,6 @@ $randomColor: rgb(random(256)-1,random(256)-1,random(256)-1);
   position: relative;
   width: 100%;
   padding-top: 56.25%; /* 16:9 Aspect Ratio */
-  user-select: none;
 }
 
 #editor-positions > div{
@@ -49,6 +48,7 @@ $randomColor: rgb(random(256)-1,random(256)-1,random(256)-1);
 .editor-position {
   border: 1px solid #989898;
   color: white;
+  user-select: none;
 }
 
 #editor-duration-menu {
@@ -64,6 +64,8 @@ $randomColor: rgb(random(256)-1,random(256)-1,random(256)-1);
   border: 1px solid black;
   padding: 3px;
   margin-bottom: 1px;
+  overflow-x: scroll;
+  overflow-y: hidden;
 }
 
 .editor-duration button {
@@ -77,9 +79,22 @@ $randomColor: rgb(random(256)-1,random(256)-1,random(256)-1);
 
 .editor-separation-element {
   width: 100px;
-  height: 100%;
+  height: 44px !important;
   background-color: rgb(random(256)-1,random(256)-1,random(256)-1);
   color: white;
+  user-select: none !important;
+}
+
+.editor-separation-element button {
+  position: absolute;
+  bottom: 3px;
+  right: 3px;
+}
+
+.editor-separation-element li {
+  font-size: 7pt;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 #scene-list-container .ant-tabs-content {
