feat(SceneEditor): ajoute la prévisualisation du média dans l'éditeur de scène

--- a/src/client/assets/javascripts/features/displayManagement/components/SceneEditorContainer/SceneEditorContainer.scss
+++ b/src/client/assets/javascripts/features/displayManagement/components/SceneEditorContainer/SceneEditorContainer.scss
@@ -49,6 +49,9 @@ $randomColor: rgb(random(256)-1,random(256)-1,random(256)-1);
   border: 1px solid #989898;
   color: white;
   user-select: none;
+  overflow: hidden;
+  text-align: center;
+  margin-top: 2px;
 }
 
 #editor-duration-menu {
