--- a/src/client/assets/javascripts/features/core/components/SideMenu/SideMenu.scss
+++ b/src/client/assets/javascripts/features/core/components/SideMenu/SideMenu.scss
@@ -4,16 +4,14 @@
 
 #SideMenu.collapsed {
   .anticon {
+    margin-left: 8px;
     font-size: 16px;
     vertical-align: middle;
   }
-  .item-text {
+  .hidden-if-collapsed {
     display: none;
   }
   .ant-menu-submenu-title:after {
-    right: 6px;
-  }
-  .ant-menu-item, .ant-menu-submenu-title {
-    padding-left: 22px;
+    display: none;
   }
 }
