feat(AgendaEditor): ajoute le fonctionnement internet de l'éditeur de l'agenda
S'approche d'une version finale utilisable. A essayer.

--- a/src/client/assets/javascripts/features/displayManagement/components/CalendarContainer/CalendarContainer.scss
+++ b/src/client/assets/javascripts/features/displayManagement/components/CalendarContainer/CalendarContainer.scss
@@ -17,3 +17,12 @@
   text-align: right;
   font-style: italic;
 }
+
+.calendar-details .ant-row {
+  margin-bottom: 5px;
+}
+
+.fc-time-grid-event.selected {
+  border: 1px #111111 solid;
+  background-color: #3a99ad;
+}
