--- a/src/client/assets/javascripts/features/displayManagement/components/CalendarContainer/CalendarContainer.scss
+++ b/src/client/assets/javascripts/features/displayManagement/components/CalendarContainer/CalendarContainer.scss
@@ -2,6 +2,11 @@
   overflow: hidden;
 }
 
+#calendar-container .ant-badge {
+  font-style: italic;
+  float: right;
+}
+
 .calendar-details {
   padding-top: 5px;
   padding-bottom: 5px;
@@ -25,4 +30,19 @@
 .fc-time-grid-event.selected {
   border: 1px #111111 solid;
   background-color: #3a99ad;
+}
+
+#drop-empty-calendar {
+  padding-top: 30px;
+  opacity: 0.75;
+  border: 1px dashed black;
+  text-align: center;
+  position: absolute;
+  width: 250px;
+  height: 100px;
+  z-index: 300;
+  left: 50%;
+  top: 50%;
+  background-color: white;
+  box-shadow: 0px 0px 10px 0px;
 }
