--- a/src/client/assets/javascripts/features/displayManagement/components/SceneEditorContainer/SceneEditorContainer.scss
+++ b/src/client/assets/javascripts/features/displayManagement/components/SceneEditorContainer/SceneEditorContainer.scss
@@ -54,6 +54,11 @@ $randomColor: rgb(random(256)-1,random(256)-1,random(256)-1);
   margin-top: 2px;
 }
 
+.editor-position img {
+  pointer-events: none;
+  user-select: none;
+}
+
 #editor-duration-menu {
   margin-top: 10px;
   margin-bottom: 10px;
