--- a/src/client/assets/javascripts/features/core/components/AppHeader/AppHeader.scss
+++ b/src/client/assets/javascripts/features/core/components/AppHeader/AppHeader.scss
@@ -13,3 +13,7 @@
   box-shadow: 0px -3px 14px 0px rgba(184,184,184,0.55);
   border-bottom: 1px solid #e8e8e8;
 }
+
+#logo {
+  height: $AppHeaderHeight - 4px;
+}
