fix(ManagementLayout): corrige le scroll x de la nav

--- a/src/client/assets/javascripts/features/core/components/ManagementLayout/ManagementLayout.scss
+++ b/src/client/assets/javascripts/features/core/components/ManagementLayout/ManagementLayout.scss
@@ -18,6 +18,7 @@
     top: 0px;
     bottom: 48px;
     overflow-y: auto;
+    overflow-x: hidden;
   }
   .ant-layout-sider.ant-layout-sider-collapsed .siderContent {
     overflow: visible;
