--- a/src/client/assets/javascripts/features/displayManagement/displayManagement.scss
+++ b/src/client/assets/javascripts/features/displayManagement/displayManagement.scss
@@ -5,6 +5,8 @@ $primary-color: #f4f4f4;
 #displayManagementLayout > .ant-layout-header {
   background-color: $primary-color !important;
   border-bottom: solid 1px #ddd;
+  line-height: 32px;
+  height: 32px;
 }
 #displayManagementLayout > div > div > .ant-layout-sider {
   background-color: $primary-color !important;
