--- a/src/client/assets/javascripts/features/displayManagement/components/MediaListContainer/MediaList.scss
+++ b/src/client/assets/javascripts/features/displayManagement/components/MediaListContainer/MediaList.scss
@@ -14,6 +14,7 @@
 .gutter-example .ant-row > div {
   background: transparent;
 }
+
 .media-gutter-box {
   padding: 5px 0;
   border: 0px solid black;
@@ -27,4 +28,8 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+}
+
+.media-list-container .ant-collapse-content {
+  overflow: initial;
 }
