--- a/src/client/assets/javascripts/features/displayManagement/displayManagement.scss
+++ b/src/client/assets/javascripts/features/displayManagement/displayManagement.scss
@@ -25,3 +25,8 @@ $primary-color: #f1f1f1;
   display: block;
   overflow-x: visible;
 }
+
+.ant-collapse-content > .ant-collapse-content-box {
+  padding-top: 8px !important;
+  padding-bottom: 10px !important;
+}
