--- a/src/client/assets/javascripts/features/core/components/ManagementLayout/ManagementLayout.scss
+++ b/src/client/assets/javascripts/features/core/components/ManagementLayout/ManagementLayout.scss
@@ -5,7 +5,7 @@
   overflow: hidden;
 }
 #ManagementLayout {
-  .ant-layout-sider {
+  > .ant-layout-sider {
     z-index: 2;
     background-color: $primary-color !important;
     box-shadow: 3px 0px 10px 0px rgba(184,184,184,0.15);
