--- a/src/client/assets/javascripts/features/displayManagement/components/MediaListContainer/MediaList.scss
+++ b/src/client/assets/javascripts/features/displayManagement/components/MediaListContainer/MediaList.scss
@@ -1,9 +1,8 @@
 .media-list-container {
   height: 100%;
-  background-color: #f4f4f4;
   border: 0px solid black;
   width: 250px;
-  padding: 5px;
+  padding: 0 5px 5px 5px;
 }
 
 .group-media-list {
