--- a/src/client/assets/javascripts/features/displayManagement/displayManagement.scss
+++ b/src/client/assets/javascripts/features/displayManagement/displayManagement.scss
@@ -12,16 +12,17 @@ $primary-color: #f1f1f1;
 }
 
 #displayManagementLayout > .ant-layout-content {
-  background-color: #f1f1f1;
+  background-color: $primary-color;
 }
 
 #displayManagementLayout .display-management-content-layout {
   height: 100%;
+  background-color: $primary-color;
+  padding-top: 5px;
 }
 
 #displayManagementLayout .ant-layout-content {
-  padding: 0px 5px 0 5px;
-  background-color: #f1f1f1;
+  padding: 0px 5px 0 0;
   display: block;
   overflow-x: visible;
 }
