--- a/src/client/assets/javascripts/features/displayManagement/components/SceneEditorContainer/SceneEditorContainer.scss
+++ b/src/client/assets/javascripts/features/displayManagement/components/SceneEditorContainer/SceneEditorContainer.scss
@@ -98,3 +98,9 @@ $randomColor: rgb(random(256)-1,random(256)-1,random(256)-1);
 #scene-editor-form .ant-form-item {
   margin-bottom: 12px;
 }
+
+#scene-editor-form input {
+  width: 70px;
+  height: 28px;
+  padding-left: 5px;
+}
