feat(thumbnail): fetch les vignette pour les images de la media box

--- a/src/client/assets/javascripts/features/displayManagement/components/MediaListContainer/MediaList.scss
+++ b/src/client/assets/javascripts/features/displayManagement/components/MediaListContainer/MediaList.scss
@@ -31,3 +31,8 @@
 .media-list-container .ant-collapse-content {
   overflow: initial;
 }
+
+.thumbnail {
+  max-width: 32px;
+  max-height: 32px;
+}
