--- a/src/client/assets/javascripts/features/displayManagement/components/SceneEditorContainer/SceneEditorContainer.scss
+++ b/src/client/assets/javascripts/features/displayManagement/components/SceneEditorContainer/SceneEditorContainer.scss
@@ -103,4 +103,14 @@ $randomColor: rgb(random(256)-1,random(256)-1,random(256)-1);
   width: 70px;
   height: 28px;
   padding-left: 5px;
+
+.editor-cursor-container {
+  border: 1px solid black;
+  border-bottom: 0px;
+  padding: 0 1px 0 3px;
+  height: 10px;
+}
+
+.editor-cursor-element{
+  cursor: e-resize;
 }
