fix(sceneEditorContainer.scss): oublie de fermeture d'accolade. Impossible de compiler.

--- a/src/client/assets/javascripts/features/displayManagement/components/SceneEditorContainer/SceneEditorContainer.scss
+++ b/src/client/assets/javascripts/features/displayManagement/components/SceneEditorContainer/SceneEditorContainer.scss
@@ -103,6 +103,7 @@ $randomColor: rgb(random(256)-1,random(256)-1,random(256)-1);
   width: 70px;
   height: 28px;
   padding-left: 5px;
+}
 
 .editor-cursor-container {
   border: 1px solid black;
