--- a/src/client/assets/javascripts/features/displayManagement/components/DataTable/DataTable.scss
+++ b/src/client/assets/javascripts/features/displayManagement/components/DataTable/DataTable.scss
@@ -1,14 +1,16 @@
 div.maw-data-table {
 
-}
-
-div.maw-data-table {
   .maw-data-table-tool-bar {
     button {
       margin-right: 4px;
     }
   }
-  .maw-data-table-actions-column > div {
+
+  th.maw-data-table-actions-column {
+    text-align: center;
+  }
+
+  .maw-actions-cell {
     display: flex;
     justify-content: space-around;
     align-items: center;
