--- a/src/client/assets/javascripts/features/displayManagement/components/SceneEditorContainer/SceneEditorContainer.scss
+++ b/src/client/assets/javascripts/features/displayManagement/components/SceneEditorContainer/SceneEditorContainer.scss
@@ -57,7 +57,8 @@ $randomColor: rgb(random(256)-1,random(256)-1,random(256)-1);
 }
 
 .editor-duration {
-  border: 1px solid black;
+  border: 1px solid rgb(191, 191, 191);
+  border-radius: 2px;
   padding: 3px;
   margin-bottom: 1px;
   overflow-x: hidden;
@@ -106,9 +107,10 @@ $randomColor: rgb(random(256)-1,random(256)-1,random(256)-1);
 }
 
 .editor-cursor-container {
-  border: 1px solid black;
+  border: 1px solid rgb(191, 191, 191);
+  border-radius: 2px;
   border-bottom: 0px;
-  padding: 0 1px 0 3px;
+  padding: 0 0 0 3px;
   height: 10px;
 }
 
