--- a/src/client/assets/javascripts/features/displayManagement/components/CalendarContainer/CalendarContainer.scss
+++ b/src/client/assets/javascripts/features/displayManagement/components/CalendarContainer/CalendarContainer.scss
@@ -45,7 +45,7 @@
   width: 250px;
   height: 100px;
   z-index: 300;
-  left: 50%;
+  left: calc(50% - 125px);
   top: 50%;
   background-color: white;
   box-shadow: 0px 0px 10px 0px;
