refactor(ratio): ajoute la gestion du ration dans les fetch et patch media
Par defaut les scène sont en 16/9 encore.

--- a/src/client/assets/javascripts/features/displayManagement/components/SceneEditorContainer/SceneEditorContainer.scss
+++ b/src/client/assets/javascripts/features/displayManagement/components/SceneEditorContainer/SceneEditorContainer.scss
@@ -17,7 +17,7 @@ $randomColor: rgb(random(256)-1,random(256)-1,random(256)-1);
   border: 1px solid black;
   position: relative;
   width: 100%;
-  padding-top: 56.25%; /* 16:9 Aspect Ratio */
+  padding-top: 56.25%; /* 16:9 Aspect Ratio */ /* 177.7777% for 9/16 */
   overflow: hidden;
 }
 
