--- a/src/client/assets/javascripts/features/displayManagement/components/CalendarEditorContainer/CalendarContainer.scss
+++ b/src/client/assets/javascripts/features/displayManagement/components/CalendarEditorContainer/CalendarContainer.scss
@@ -11,6 +11,10 @@
   float: right;
 }
 
+#calendar-container > div {
+  padding: 0 5px 5px 5px;
+}
+
 .calendar-details {
   padding-top: 5px;
   padding-bottom: 5px;
@@ -45,8 +49,8 @@
   width: 250px;
   height: 100px;
   z-index: 300;
-  left: calc(50% - 125px);
-  top: 50%;
+  left: calc(50%);
+  top: 25%;
   background-color: white;
   box-shadow: 0px 0px 10px 0px;
 }
