--- a/src/client/assets/javascripts/features/displayManagement/components/SceneEditorContainer/SceneEditorContainer.scss
+++ b/src/client/assets/javascripts/features/displayManagement/components/SceneEditorContainer/SceneEditorContainer.scss
@@ -72,12 +72,14 @@ $randomColor: rgb(random(256)-1,random(256)-1,random(256)-1);
 
 .editor-separation-element {
   width: 100px;
-  height: 44px !important;
   background-color: rgb(random(256)-1,random(256)-1,random(256)-1);
   color: white;
   user-select: none !important;
   padding-left: 2px;
-  padding-top: 1px;
+  margin-top: 3px;
+  margin-bottom: 3px;
+  background-color: grey;
+  border: 1px black solid;
 }
 
 .editor-separation-element button {
@@ -106,14 +108,6 @@ $randomColor: rgb(random(256)-1,random(256)-1,random(256)-1);
   padding-left: 5px;
 }
 
-.editor-cursor-container {
-  border: 1px solid rgb(191, 191, 191);
-  border-radius: 2px;
-  border-bottom: 0px;
-  padding: 0 0 0 3px;
-  height: 10px;
-}
-
 .editor-cursor-element{
   cursor: e-resize;
 }
@@ -124,4 +118,14 @@ $randomColor: rgb(random(256)-1,random(256)-1,random(256)-1);
   color: white;
   padding: 3px;
   border-radius: 2px;
+}
+
+.timeline {
+  margin-top: 7px;
+  background-color: rgba(183, 183, 183, 0.5);
+  background-image: linear-gradient(to bottom, black 1px, transparent 1px);
+  border-bottom: 1px black solid;
+  border-left: 1px black solid;
+  border-right: 1px black solid;
+
 }
