--- a/src/client/assets/javascripts/features/displayManagement/components/SceneEditorContainer/SceneEditorContainer.scss
+++ b/src/client/assets/javascripts/features/displayManagement/components/SceneEditorContainer/SceneEditorContainer.scss
@@ -106,6 +106,7 @@ $randomColor: rgb(random(256)-1,random(256)-1,random(256)-1);
   width: 70px;
   height: 28px;
   padding-left: 5px;
+  float: right;
 }
 
 .editor-cursor-element{
