feat(CalendarEditor): ajoute la récurence
Utilise le nouvel élément pour choissir le délai de répétition.
Permet la sélection de date de fin de répétition.
Affiche les éléments récursifs comme étant des events full calendar.
Ces events ajoutés ont une classe pour les différentier et ne sont pas editable.

--- a/src/client/assets/javascripts/features/displayManagement/components/CalendarEditorContainer/CalendarContainer.scss
+++ b/src/client/assets/javascripts/features/displayManagement/components/CalendarEditorContainer/CalendarContainer.scss
@@ -36,8 +36,13 @@
 }
 
 .fc-time-grid-event.selected, .fc-day-grid-event.selected {
-  border: 1px #111111 solid;
+  border: 1.5px #111111 solid;
   background-color: #3a99ad;
+}
+
+.fc-time-grid-event.reccuring, .fc-day-grid-event.reccuring {
+  background-color: #115b25;
+  cursor: not-allowed;
 }
 
 #drop-empty-calendar {
