fix(SceneEditor): corrige un prob de height sur les durations
J'ai mis dans le css une height !important

--- a/src/client/assets/javascripts/features/displayManagement/components/SceneEditorContainer/SceneEditorContainer.scss
+++ b/src/client/assets/javascripts/features/displayManagement/components/SceneEditorContainer/SceneEditorContainer.scss
@@ -71,6 +71,7 @@ $randomColor: rgb(random(256)-1,random(256)-1,random(256)-1);
 }
 
 .editor-separation-element {
+  height: 44px !important;
   width: 100px;
   background-color: rgb(random(256)-1,random(256)-1,random(256)-1);
   color: white;
