feat(highlightSelected): entour le média séléctionné dans le viewport et la timeline

--- a/src/client/assets/javascripts/features/displayManagement/components/SceneEditorContainer/SceneEditorContainer.scss
+++ b/src/client/assets/javascripts/features/displayManagement/components/SceneEditorContainer/SceneEditorContainer.scss
@@ -170,3 +170,7 @@ $randomColor: rgb(random(256)-1,random(256)-1,random(256)-1);
   left: -4px;
   background-color: #f1f1f1;
 }
+
+.selectedItem {
+  border: solid 1px #5194ff;
+}
